--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
-show_downloads: true
+title: AUCTF - Ashland University Capture the Flags
+description: The official website for Ashland Universities Capture the Flag event.
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
