--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: AUCTF - Ashland University Capture the Flags
+title: AUCTF - Ashland University Capture the Flag
 description: The official website for Ashland Universities Capture the Flag event.
 show_downloads: false
 google_analytics:
